--- a/Style.css
+++ b/Style.css
@@ -51,6 +51,18 @@ header {
     color:#334eac;
 }
 
+.icon {
+    margin-left: auto;
+}
+
+.icon img{
+    display: grid;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    text-align: right;
+}
+
 .main-home { 
     background-color: #fff9ef;
     padding: 80px 0;
@@ -90,9 +102,11 @@ header {
 
 .main-work {
     padding: 60px 0;
+    color: #ffffff;
+    text-align: center;
+    font-size: 1.5rem;
 }
 
-.main-work h2,
 .main-contact h2,
 .main-about h2,
 .main-more h2 {
