--- a/Style.css
+++ b/Style.css
@@ -1,4 +1,4 @@
-*{
+* {
     box-sizing: border-box;
 }
 
@@ -29,7 +29,7 @@ header {
 .navbar ul {
     list-style: none;
     margin: 0;
-    display:flex;
+    display: flex;
 }
 
 .navbar ul li {
@@ -41,6 +41,11 @@ header {
     text-decoration: none;
     border-radius: 5px;
     background-color: 0.3s ease;
+    padding: 10px 15px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    border-radius: 50px; 
 }
 
 .navbar ul li a:hover {
@@ -48,14 +53,14 @@ header {
 }
 
 .navbar ul li.active a {
-    color:#334eac;
+    color: #334eac;
 }
 
 .icon {
     margin-left: auto;
 }
 
-.icon img{
+.icon img {
     display: grid;
     width: 50px;
     height: 50px;
@@ -63,7 +68,7 @@ header {
     text-align: right;
 }
 
-.main-home { 
+.main-home {
     background-color: #fff9ef;
     padding: 80px 0;
     text-align: center;
@@ -71,14 +76,14 @@ header {
 
 .main-home h1 {
     color: #334eac;
-    font-size: 2.5rem;
+    font-size: 4rem;
     margin-bottom: 15px;
 }
 
 .main-home p {
-    font-size: 1.1rem;
+    font-size: 2rem;
     color: #bad6eb;
-    margin-bottom: 15px;    
+    margin-bottom: 15px;
 }
 
 .button {
@@ -87,9 +92,10 @@ header {
     color: #334eac;
     padding: 10px 20px;
     text-decoration: none;
-    border-style:double;
+    border-style: double;
     border-radius: 50px;
     border-color: #334eac;
+    font-size: 1.5rem;
 }
 
 .button:hover {
@@ -104,7 +110,21 @@ header {
     padding: 60px 0;
     color: #ffffff;
     text-align: center;
-    font-size: 1.5rem;
+}
+
+.main-certificate h2,
+.main-work h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 4rem;
+    color: #ffffff;
+}
+
+.main-certificate p,
+.main-work p {
+    font-size: 5rem;
+    color: #ffffff;
+    margin-bottom: 15px;
 }
 
 .main-contact h2,
@@ -112,8 +132,8 @@ header {
 .main-more h2 {
     text-align: center;
     margin-bottom: 20px;
-    font-size: 2rem;
-    color:#334eac;
+    font-size: 4rem;
+    color: #334eac;
 }
 
 .project-grid {
@@ -135,22 +155,24 @@ header {
     color: #ffffff;
     margin-top: 0;
     margin-bottom: 10px;
+    font-size: 2.5rem;
 }
 
 .project-card p {
     color: #ffffff;
+    font-size: 1.7rem;
 }
 
 .project-card a {
-    text-decoration: none;
     color: #ffffff;
+    font-size: 1.7rem;
 }
 
 .project-card a:hover {
     color: #bad6eb;
 }
 
-.project-picture img{
+.project-picture img {
     border-radius: 20px;
     max-width: 100%;
     height: 300px;
@@ -163,20 +185,35 @@ header {
     color: #334eac;
 }
 
+.main-about h3 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 3rem;
+}
+
 .main-about .container p {
     line-height: 1.8;
+    font-size: 2rem;
+}
+
+.certificate-picture img {
+    border-radius: 20px;
+    max-width: 100%;
+    height: 300px;
+    text-align: center;
 }
 
 footer {
     background-color: #bad6eb;
     color: #ffffff;
     text-align: center;
-    padding: 1rem ;
+    padding: 1rem;
     bottom: 0;
     width: 100%;
+    font-size: 1.5rem;
 }
 
-.main-contact ul{
+.main-contact ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -184,9 +221,10 @@ footer {
     text-align: center;
 }
 
-.main-contact ul li a{
+.main-contact ul li a {
     text-decoration: none;
-    color: #334eac
+    color: #334eac;
+    font-size: 1.5rem;
 }
 
 .main-contact {
@@ -195,4 +233,61 @@ footer {
 
 .main-contact ul li a:hover {
     color: #bad6eb;
+}
+
+.certificate-card {
+    background-color: #334eac;
+    border-color: #ffffff;
+    border-style: solid;
+    padding: 20px;
+    border-radius: 15px;
+    text-align: center;
+    margin: 0 auto;
+    max-width: 600px;
+    margin-bottom: 20px;
+}
+
+.certificate-card h3 {
+    color: #ffffff;
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 2.5rem;
+}
+/* popup */
+
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.popup-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.popup-image {
+    max-width: 90%;
+    max-height: 80%;
+    margin-bottom: 10px;
+    display: block;
+    border-radius: 20px;
+}
+
+.popup-close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    color: #fff;
+    font-size: 30px;
+    font-weight: bold;
+    cursor: pointer;
 }
