--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,4 @@
+/* Resetting default browser styles */
 * {
     box-sizing: border-box;
 }
@@ -29,27 +30,28 @@ header {
 .navbar ul {
     list-style: none;
     margin: 0;
-    display: flex;
+    display: flex; /* Ensure items are laid out in a row */
+    align-items: center; /* Vertically align items in the center */
 }
 
 .navbar ul li {
-    margin: 0 13px
+    margin: 0 13px;
 }
 
 .navbar ul li a {
     color: #ffffff;
     text-decoration: none;
-    border-radius: 5px;
-    background-color: 0.3s ease;
+    border-radius: 50px;
+    background-color: transparent; /* Removed initial background */
     padding: 10px 15px;
     font-size: 1.5rem;
     font-weight: 500;
     transition: background-color 0.3s ease, color 0.3s ease;
-    border-radius: 50px; 
 }
 
 .navbar ul li a:hover {
     color: #334eac;
+    background-color: #ffffff; /* Added background on hover */
 }
 
 .navbar ul li.active a {
@@ -57,15 +59,38 @@ header {
 }
 
 .icon {
-    margin-left: auto;
+    margin-left: 13px;
 }
 
 .icon img {
-    display: grid;
+    display: block;
     width: 50px;
     height: 50px;
     border-radius: 50px;
     text-align: right;
+}
+
+.Resume a {
+    display: flex;
+    color: #ffffff;
+    text-decoration: none;
+    border-radius: 50px;
+    background-color: #334eac;
+    padding: 10px 15px;
+    font-size: 1rem;
+    font-weight: 500;
+    transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease; /* Added border-color transition */
+    border: 2px solid #ffffff;
+}
+
+.Resume a:hover {
+    background-color: #ffffff;
+    color: #334eac;
+    border-color: #334eac;
+}
+
+.Resume {
+    margin-left: auto;
 }
 
 .main-home {
@@ -253,8 +278,8 @@ footer {
     margin-bottom: 10px;
     font-size: 2.5rem;
 }
-/* popup */
 
+/* popup */
 .popup-overlay {
     position: fixed;
     top: 0;
